--- a/testomania/src/main/res/drawable/ic_category.xml
+++ b/testomania/src/main/res/drawable/ic_category.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#FFEB3B"
+<vector android:height="24dp" android:tint="@color/orange"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M12,2l-5.5,9h11z"/>
