--- a/testomania/src/main/res/values/colors.xml
+++ b/testomania/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FFF57F17</color>
 </resources>
